--- a/src/app/classroom/components/classroom-creation/classroom-creation.component.html
+++ b/src/app/classroom/components/classroom-creation/classroom-creation.component.html
@@ -6,7 +6,7 @@
     </h2>
 
     <!-- Close dialog -->
-    <button class="button-close" mat-icon-button attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">
+    <button class="button-close action-button" mat-icon-button attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">
       <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
     </button>
   </header>
