--- a/src/app/classroom/settings/components/credits/credits.component.html
+++ b/src/app/classroom/settings/components/credits/credits.component.html
@@ -1,4 +1,4 @@
-<div class="credits-container p-1" fxLayout="column" fxLayoutAlign="start center">
+<div class="credits-container p-h" fxLayout="column" fxLayoutAlign="start center">
 
   <!-- Flaticon avatars -->
   <span class="mat-hint mb-q">Los avatares de los alumnos han sido diseñados por <a class="link" target="_blank" href="https://www.freepik.com" title="Freepik">Freepik</a> desde <a class="link" target="_blank" href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></span>
