--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -41,7 +41,7 @@
       <!-- Archived -->
       <div *ngIf="day?.archived" class="mat-small error mb-h">
         <fa-icon class="mr-q mat-icon-14 error-color" icon="box"></fa-icon>
-        <span class="error-color"> {{'DAY_ARCHIVED' | translate}} </span>
+        <span class="error-color"> {{'ARCHIVED' | translate}} </span>
       </div>
       
       <!-- Title -->
