--- a/src/app/classroom/components/subject-creation/subject-creation.component.html
+++ b/src/app/classroom/components/subject-creation/subject-creation.component.html
@@ -2,7 +2,7 @@
   <header class="dialog-header padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
     <!-- Title -->
     <h2 class="m-0" mat-dialog-title>
-      {{(data?.entity?.id ? 'EDIT_SUBJECT' : 'CREATE_SUBJECT') | translate}}
+      {{(data.isClone ? 'CLONE_SUBJECT' : data?.entity?.id ? 'EDIT_SUBJECT' : 'CREATE_SUBJECT') | translate}}
     </h2>
 
     <!-- Close dialog -->
@@ -41,6 +41,6 @@
   <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="end center">
     <!-- Action buttons -->
     <button mat-button color="warn" attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">{{'CANCEL' | translate}}</button>
-    <button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="subjectFormGroup.invalid || validatingName" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
+    <button class="ml-h" mat-flat-button [color]="data.isClone || !data?.entity?.id ? 'primary' : 'accent'" mat-dialog-close [disabled]="subjectFormGroup.invalid || validatingName" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{(data.isClone ? 'CLONE' : data?.entity?.id ? 'SAVE' : 'CREATE_SUBJECT') | translate}}</button>
   </footer>
 </form>
