--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
@@ -14,7 +14,7 @@
             <!-- Archived -->
             <div *ngIf="day?.archived" class="mat-small error mb-q">
               <fa-icon class="mr-q mat-icon-14 error-color" icon="box"></fa-icon>
-              <span class="error-color"> {{'DAY_ARCHIVED' | translate}} </span>
+              <span class="error-color"> {{'ARCHIVED' | translate}} </span>
             </div>
 
             <span class="mat-h3 mb-0 pointer student-name" [routerLink]="[ '/aula/alumno', day?.studentId ]">{{day?.student?.personal?.name}}</span>
