refactor studentList y studentProfile subscription

--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -1,5 +1,5 @@
 <section class="container container-nopadd">
-  <header #profileHeader class="profile-header mat-card shadow-bottom padding-content pb-h mat-elevation-z0">
+  <header class="profile-header mat-card shadow-bottom padding-content pb-h mat-elevation-z0">
 
     <div class="container-max sm mt-h" fxLayout="row">
       <div class="avatar-container mr-q" fxLayout="column" fxLayoutAlign="start center">
