--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
@@ -19,7 +19,7 @@
 
 .profile-tabs {
   margin-top: -48px;
-  height: calc(100vh - var(--main-header-size) * 2 - var(--profile-header-height));
+  height: calc(100vh - var(--main-header-size) * 2 - 190px);
 }
 
 .first-of-month {
