--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -63,14 +63,14 @@
           </div>
 
           <!-- Action button -->
-          <div fxLayout="row" fxLayoutAlign="end center" class="action-buttons">
-            <!-- <button class="action-button" mat-icon-button (click)="quickAction('archived')" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
+          <!-- <div fxLayout="row" fxLayoutAlign="end center" class="action-buttons">
+            <button class="action-button" mat-icon-button (click)="quickAction('archived')" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
               <fa-icon [ngClass]="{'error-color': student?.archived}" class="mat-icon-18 mat-hint" icon="box"></fa-icon>
-            </button> -->
+            </button>
             <button class="action-button" mat-icon-button (click)="editStudent()" [matTooltip]="'EDIT_STUDENT' | translate" [matTooltipShowDelay]="650">
               <fa-icon class="mat-icon-18 mat-hint" icon="pen"></fa-icon>
             </button>
-          </div>
+          </div> -->
         </div>
 
         <!-- Badges -->
