--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -102,7 +102,7 @@
 
             <!-- Delete phone -->
             <div class="pl-q mb-1">
-              <button mat-icon-button color="warn" class="action-button pr--h" attr.aria-label="{{'DELETE' | translate}}" (click)="removePhone(i)">
+              <button mat-icon-button color="warn" class="action-button mr--h" attr.aria-label="{{'DELETE' | translate}}" (click)="removePhone(i)">
                 <fa-icon class="mat-icon-18" icon="trash"></fa-icon>
               </button>
             </div>
