--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,5 @@
 @import "scss/components";
 @import "scss/modified-components";
 @import "scss/main";
+@import "scss/util";
 @import "~@alejdev/css-utilities/dist/style.min.css";
