--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -1,10 +1,10 @@
 <mat-card class="p-1 mt-h mb-h mat-elevation-z0 aumente" [ngClass]="{'archived-student': !day?.hideStudent && (day?.archived || day?.student?.archived) || (day?.hideStudent && day?.archived)}" matRipple (click)="goTo()">
 
-  <div class="day-header mb-1" fxLayout="row" fxLayoutAlign="space-between center">
+  <div class="day-header mb-h mt--q" fxLayout="row" fxLayoutAlign="space-between center">
 
-    <div class="date-container">
+    <div class="date-container ml--q">
       <!-- Favorite -->
-      <button class="action-button small-button mr-q" mat-icon-button (click)="quickAction($event, 'favorite')">
+      <button class="action-button small-button mr-h" mat-icon-button (click)="quickAction($event, 'favorite')">
         <fa-icon [ngClass]="{'star-active': day?.favorite}" class="mat-icon-16 mat-hint" icon="star"></fa-icon>
       </button>
 
@@ -17,21 +17,22 @@
       <span class="mat-small mat-hint mr-q text-date">{{day?.date | date: 'd MMM, yy'}}</span>
     </div>
 
-    <div *ngIf="!day?.hideStudent && day?.student" class="student-container" fxLayout="row" fxLayoutAlign="end center">
+    <div class="student-container mr--q" fxLayout="row" fxLayoutAlign="end center">
 
       <!-- Name -->
-      <a [routerLink]="[ '/aula/alumno', day?.student?.id ]" [state]="{ fromUrl: router.url }" class="mat-small mat-hint student-name">{{day?.student?.personal?.name}}</a>
+      <a *ngIf="!day?.hideStudent && day?.student" [routerLink]="[ '/aula/alumno', day?.student?.id ]" [state]="{ fromUrl: router.url }" class="mat-small mat-hint student-name">{{day?.student?.personal?.name}}</a>
 
       <!-- Avatar -->
-      <div fxLayout="row" fxLayoutAlign="end center" class="avatar-container ml-h" [ngClass]="{archived: day?.student?.archived}">
-        <fa-icon *ngIf="day?.student?.archived" [ngClass]="{'error-color': day?.student?.archived}" class="mat-icon-18 mat-hint mr-h" icon="box"></fa-icon>
+      <div *ngIf="!day?.hideStudent && day?.student" fxLayout="row" fxLayoutAlign="end center" class="avatar-container ml-h" [ngClass]="{archived: day?.student?.archived}">
+        <fa-icon *ngIf="day?.student?.archived" [ngClass]="{'error-color': day?.student?.archived}" class="mat-icon-16 mat-hint mr-h" icon="box"></fa-icon>
         <a [routerLink]="[ '/aula/alumno', day?.student?.id ]">
           <img class="avatar avatar-xs p-0 aumente aumente-big" [src]="day?.student?.personal?.avatar | srcImage" alt="Avatar">
         </a>
       </div>
 
+      <!-- Menu options-->
+      <a13-menu-options [options]="menuOptions" [buttonSize]="16"></a13-menu-options>
     </div>
-
   </div>
 
   <!-- Day content -->
@@ -45,23 +46,24 @@
       </div>
 
       <!-- Title -->
-      <span class="mat-h3 mb-q day-title">{{day?.title}}</span>
+      <span class="mat-h3 mb-h day-title">{{day?.title}}</span>
 
       <!-- Content -->
       <div class="day-content-text txt-1 truncate-2 mat-hint">
         {{day?.content | stripHTML}}
       </div>
     </div>
-    <div class="action-buttons" fxLayout="row" fxLayoutAlign="end center">
+    <!-- <div class="action-buttons" fxLayout="row" fxLayoutAlign="end center"> -->
       <!-- Edit -->
-      <button class="action-button" mat-icon-button (click)="editDay($event)">
+      <!-- <button class="action-button" mat-icon-button (click)="editDay($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="pen"></fa-icon>
-      </button>
+      </button> -->
+
       <!-- Delete -->
       <!-- <button class="action-button" mat-icon-button (click)="deleteDay($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="trash"></fa-icon>
       </button> -->
-    </div>
+    <!-- </div> -->
   </div>
 
 </mat-card>
