--- a/src/app/shared/components/day-card/day-card.component.scss
+++ b/src/app/shared/components/day-card/day-card.component.scss
@@ -3,7 +3,6 @@ mat-card {
   &:focus {
     outline: -webkit-focus-ring-color auto 0;
   }
-
   .mat-icon-button.small-button {
     width: 22px;
     height: 22px;
@@ -11,7 +10,6 @@ mat-card {
   }
 
   .date-container {
-
     flex: 0 0 125px;
 
     .text-date {
@@ -43,7 +41,7 @@ mat-card {
   .day-content-container {
 
     .day-content {
-      width: calc(100% - 2.2rem);
+      // width: calc(100% - 2.2rem);
     }
 
     .day-title {
