--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -6,9 +6,9 @@
     </h2>
 
     <!-- Favorite -->
-    <button mat-button (click)="student.favorite=!student.favorite" [matTooltip]="'MSG.MARK_STUDENT_FAV' | translate" [matTooltipShowDelay]="650">
-      <span class="mat-small mat-hint mr-q"> {{(student?.favorite ? 'FAVORITE'  : 'MARK_FAVORITE') | translate}} </span>
-      <fa-icon [ngClass]="{'star-active': student?.favorite}" class="mat-icon-22 mat-hint" icon="star"></fa-icon>
+    <button mat-button (click)="toggleBooleanCrl('favoriteCtrl')" [matTooltip]="'MSG.MARK_STUDENT_FAV' | translate" [matTooltipShowDelay]="650">
+      <span class="mat-small mat-hint mr-q"> {{(studentFormGroup?.value.booleanFormGroup.favoriteCtrl ? 'FAVORITE'  : 'MARK_FAVORITE') | translate}} </span>
+      <fa-icon [ngClass]="{'star-active': studentFormGroup?.value.booleanFormGroup.favoriteCtrl}" class="mat-icon-22 mat-hint" icon="star"></fa-icon>
     </button>
   </header>
 
@@ -199,9 +199,9 @@
   <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
 
     <!-- Archived -->
-    <button mat-button (click)="student.archived=!student.archived" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
-      <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'error-color': student?.archived}" [icon]="student?.archived ? 'box' : 'box-open'"></fa-icon>
-      <span class="mat-small mat-hint ml-q"> {{(student?.archived ? 'ARCHIVED'  : 'ARCHIVE') | translate}} </span>
+    <button mat-button (click)="toggleBooleanCrl('archivedCtrl')" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
+      <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'error-color': studentFormGroup?.value.booleanFormGroup.archivedCtrl}" [icon]="studentFormGroup?.value.booleanFormGroup.archivedCtrl ? 'box' : 'box-open'"></fa-icon>
+      <span class="mat-small mat-hint ml-q"> {{(studentFormGroup?.value.booleanFormGroup.archivedCtrl ? 'ARCHIVED'  : 'ARCHIVE') | translate}} </span>
     </button>
 
     <!-- Action buttons -->
